--- a/.env
+++ b/.env
@@ -5,3 +5,9 @@ NEXT_PUBLIC_METADATA_NAME=Demo
 NEXT_PUBLIC_METADATA_DESCRIPTION="Hello this a demo of blendify!"
 NEXT_PUBLIC_METADATA_LOGO="/logo.png"
 NEXT_PUBLIC_METADATA_APPLE_TOUCH_ICON="/logo.png"
+
+############################
+### CLERK CONFIGURATION ####
+############################
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_bm92ZWwtYnJlYW0tNjQuY2xlcmsuYWNjb3VudHMuZGV2JA
+CLERK_SECRET_KEY=sk_test_OvaA5zRBzJG9rZfPW44ajBX1jVMxrhRv7nXP2yXDFJ
