--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,13 @@
 ######################
 ###### METADATA ############
 ############################
-NEXT_PUBLIC_METADATA_NAME=Demo
-NEXT_PUBLIC_METADATA_DESCRIPTION="Hello this a demo of blendify!"
-NEXT_PUBLIC_METADATA_LOGO="/logo.png"
+NEXT_PUBLIC_METADATA_NAME=
+NEXT_PUBLIC_METADATA_DESCRIPTION=
+NEXT_PUBLIC_METADATA_LOGO=
+
+
+############################
+### CLERK CONFIGURATION ####
+############################
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
+CLERK_SECRET_KEY=
