Aadd light and adrk theme switcher]

--- a/.env
+++ b/.env
@@ -1,10 +1,18 @@
 ############################
 ###### METADATA ############
 ############################
-NEXT_PUBLIC_METADATA_NAME=Demo
+NEXT_PUBLIC_METADATA_NAME="Blendify"
 NEXT_PUBLIC_METADATA_DESCRIPTION="Hello this a demo of blendify!"
-NEXT_PUBLIC_METADATA_LOGO="/logo.png"
-NEXT_PUBLIC_METADATA_APPLE_TOUCH_ICON="/logo.png"
+NEXT_PUBLIC_METADATA_LOGO="/logo.svg"
+NEXT_PUBLIC_METADATA_APPLE_TOUCH_ICON="/logo.svg"
+
+############################
+###### THEME  ##############
+############################
+NEXT_PUBLIC_SITE_LIGHT_LOGO="/logo.svg"
+NEXT_PUBLIC_SITE_DARK_LOGO="/logo-dark.svg"
+NEXT_PUBLIC_SITE_DEFAULT_THEME="light"
+
 
 ############################
 ### CLERK CONFIGURATION ####
