--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,14 @@ NEXT_PUBLIC_METADATA_LOGO=
 
 
 ############################
+###### THEME  ##############
+############################
+NEXT_PUBLIC_SITE_LIGHT_LOGO=
+NEXT_PUBLIC_SITE_DARK_LOGO=
+NEXT_PUBLIC_SITE_DEFAULT_THEME="light"
+
+
+############################
 ### CLERK CONFIGURATION ####
 ############################
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
