Add clerk sign in and sign up pages --- not completed \

--- a/.env
+++ b/.env
@@ -19,3 +19,5 @@ NEXT_PUBLIC_SITE_DEFAULT_THEME="light"
 ############################
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_bm92ZWwtYnJlYW0tNjQuY2xlcmsuYWNjb3VudHMuZGV2JA
 CLERK_SECRET_KEY=sk_test_OvaA5zRBzJG9rZfPW44ajBX1jVMxrhRv7nXP2yXDFJ
+NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
+NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
