Add type saftey for config

--- a/.env
+++ b/.env
@@ -21,3 +21,5 @@ NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_bm92ZWwtYnJlYW0tNjQuY2xlcmsuYWNjb3VudH
 CLERK_SECRET_KEY=sk_test_OvaA5zRBzJG9rZfPW44ajBX1jVMxrhRv7nXP2yXDFJ
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
+NEXT_PUBLIC_CLERK_SOCIAL_BUTTONS_VARIANT=iconButton
+NEXT_PUBLIC_CLERK_SOCIAL_BUTTONS_PLACEMENT=bottom
