--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,5 @@ NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
 CLERK_SECRET_KEY=
 NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
+NEXT_PUBLIC_CLERK_SOCIAL_BUTTONS_VARIANT=iconButton
+NEXT_PUBLIC_CLERK_SOCIAL_BUTTONS_PLACEMENT=bottom
