Add metadata configuration

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,13 @@
 NEXT_PUBLIC_METADATA_NAME=
 NEXT_PUBLIC_METADATA_DESCRIPTION=
 NEXT_PUBLIC_METADATA_LOGO=
-
+NEXT_PUBLIC_METADATA_TITLE=
+NEXT_PUBLIC_METADATA_OG_LOCALE=
+NEXT_PUBLIC_METADATA_CATEGORY=
+NEXT_PUBLIC_METADATA_OG_IMAGE=
+NEXT_PUBLIC_METADATA_OG_TITLE=
+NEXT_PUBLIC_METADATA_OG_DESCRIPTION=
+NEXT_PUBLIC_METADATA_OG_SITENAME=
 
 ############################
 ###### THEME  ##############
