--- a/.env
+++ b/.env
@@ -3,14 +3,20 @@
 ############################
 NEXT_PUBLIC_METADATA_NAME="Blendify"
 NEXT_PUBLIC_METADATA_DESCRIPTION="Hello this a demo of blendify!"
-NEXT_PUBLIC_METADATA_LOGO="/logo.svg"
-NEXT_PUBLIC_METADATA_APPLE_TOUCH_ICON="/logo.svg"
+NEXT_PUBLIC_METADATA_LOGO="/logos/logo.svg"
+NEXT_PUBLIC_METADATA_TITLE="Blendify"
+NEXT_PUBLIC_METADATA_OG_LOCALE="en_US"
+NEXT_PUBLIC_METADATA_CATEGORY="Blog, Forum"
+NEXT_PUBLIC_METADATA_OG_IMAGE="logos/logo.svg"
+NEXT_PUBLIC_METADATA_OG_TITLE="Blendify"
+NEXT_PUBLIC_METADATA_OG_DESCRIPTION="Blendify - The fully opensource blog project."
+NEXT_PUBLIC_METADATA_OG_SITENAME="Blendify"
 
 ############################
 ###### THEME  ##############
 ############################
-NEXT_PUBLIC_SITE_LIGHT_LOGO="/logo.svg"
-NEXT_PUBLIC_SITE_DARK_LOGO="/logo-dark.svg"
+NEXT_PUBLIC_SITE_LIGHT_LOGO="/logos/logo.svg"
+NEXT_PUBLIC_SITE_DARK_LOGO="/logos/logo-dark.svg"
 NEXT_PUBLIC_SITE_DEFAULT_THEME="light"
 
 
