Solved metadatabase isssue

--- a/.env
+++ b/.env
@@ -11,6 +11,7 @@ NEXT_PUBLIC_METADATA_OG_IMAGE="logos/logo.svg"
 NEXT_PUBLIC_METADATA_OG_TITLE="Blendify"
 NEXT_PUBLIC_METADATA_OG_DESCRIPTION="Blendify - The fully opensource blog project."
 NEXT_PUBLIC_METADATA_OG_SITENAME="Blendify"
+NEXT_PUBLIC_METADATA_SITEURL="http://localhost:3000"
 
 ############################
 ###### THEME  ##############
@@ -29,3 +30,5 @@ NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
 NEXT_PUBLIC_CLERK_SOCIAL_BUTTONS_VARIANT=iconButton
 NEXT_PUBLIC_CLERK_SOCIAL_BUTTONS_PLACEMENT=top
+NEXT_PUBLIC_CLERK_SIGN_IN_FALLBACK_REDIRECT_URL=/dashboard
+NEXT_PUBLIC_CLERK_SIGN_UP_FORCE_REDIRECT_URL=/onboarding
