--- a/.env.example
+++ b/.env.example
@@ -29,3 +29,5 @@ NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
 NEXT_PUBLIC_CLERK_SOCIAL_BUTTONS_VARIANT=iconButton
 NEXT_PUBLIC_CLERK_SOCIAL_BUTTONS_PLACEMENT=bottom
+NEXT_PUBLIC_CLERK_SIGN_IN_FALLBACK_REDIRECT_URL=/dashboard
+NEXT_PUBLIC_CLERK_SIGN_UP_FORCE_REDIRECT_URL=/onboarding
