Add keywords metadata to the configurations

--- a/.env
+++ b/.env
@@ -12,6 +12,7 @@ NEXT_PUBLIC_METADATA_OG_TITLE="Blendify"
 NEXT_PUBLIC_METADATA_OG_DESCRIPTION="Blendify - The fully opensource blog project."
 NEXT_PUBLIC_METADATA_OG_SITENAME="Blendify"
 NEXT_PUBLIC_METADATA_SITEURL="http://localhost:3000"
+NEXT_PUBLIC_METADATA_KEYWORDS="forum, blog, blendify, modern"
 
 ############################
 ###### THEME  ##############
