--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,8 @@ NEXT_PUBLIC_METADATA_OG_IMAGE=
 NEXT_PUBLIC_METADATA_OG_TITLE=
 NEXT_PUBLIC_METADATA_OG_DESCRIPTION=
 NEXT_PUBLIC_METADATA_OG_SITENAME=
+NEXT_PUBLIC_METADATA_SITEURL="http://localhost:3000"
+NEXT_PUBLIC_METADATA_KEYWORDS="forum, blog, blendify, modern"
 
 ############################
 ###### THEME  ##############
