setted the first prisma function

--- a/.env
+++ b/.env
@@ -33,3 +33,9 @@ NEXT_PUBLIC_CLERK_SOCIAL_BUTTONS_VARIANT=iconButton
 NEXT_PUBLIC_CLERK_SOCIAL_BUTTONS_PLACEMENT=top
 NEXT_PUBLIC_CLERK_SIGN_IN_FALLBACK_REDIRECT_URL=/dashboard
 NEXT_PUBLIC_CLERK_SIGN_UP_FORCE_REDIRECT_URL=/onboarding
+
+
+############################
+### MONGODB CONFIGURATION ##
+############################
+DATABASE_URL="mongodb+srv://abdelrahmanshwork:gso34eIMYjSbqiN9@blendify.qfgj2rf.mongodb.net/?retryWrites=true&w=majority&appName=Blendify"
