--- a/.env.example
+++ b/.env.example
@@ -33,3 +33,9 @@ NEXT_PUBLIC_CLERK_SOCIAL_BUTTONS_VARIANT=iconButton
 NEXT_PUBLIC_CLERK_SOCIAL_BUTTONS_PLACEMENT=bottom
 NEXT_PUBLIC_CLERK_SIGN_IN_FALLBACK_REDIRECT_URL=/dashboard
 NEXT_PUBLIC_CLERK_SIGN_UP_FORCE_REDIRECT_URL=/onboarding
+
+############################
+### MONGODB CONFIGURATION ##
+############################
+# Note: change <password> with the password provided by mongodb
+DATABASE_URL=""
