--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@clerk/nextjs": "^5.1.5",
     "@clerk/themes": "^2.1.9",
     "@hookform/resolvers": "^3.6.0",
+    "@prisma/client": "^5.16.0",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.1.0",
@@ -28,6 +29,7 @@
     "lucide-react": "^0.395.0",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
+    "prisma": "^5.16.0",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
