Migrated to NextAuth

--- a/.env
+++ b/.env
@@ -21,19 +21,10 @@ NEXT_PUBLIC_SITE_LIGHT_LOGO="/logos/logo.svg"
 NEXT_PUBLIC_SITE_DARK_LOGO="/logos/logo-dark.svg"
 NEXT_PUBLIC_SITE_DEFAULT_THEME="light"
 
-
 ############################
-### CLERK CONFIGURATION ####
+### Auth CONFIGURATION ####3
 ############################
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_bm92ZWwtYnJlYW0tNjQuY2xlcmsuYWNjb3VudHMuZGV2JA
-CLERK_SECRET_KEY=sk_test_OvaA5zRBzJG9rZfPW44ajBX1jVMxrhRv7nXP2yXDFJ
-NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
-NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
-NEXT_PUBLIC_CLERK_SOCIAL_BUTTONS_VARIANT=iconButton
-NEXT_PUBLIC_CLERK_SOCIAL_BUTTONS_PLACEMENT=top
-NEXT_PUBLIC_CLERK_SIGN_IN_FALLBACK_REDIRECT_URL=/dashboard
-NEXT_PUBLIC_CLERK_SIGN_UP_FORCE_REDIRECT_URL=/onboarding
-
+AUTH_SECRET="aqwertyui"
 
 ############################
 ### MONGODB CONFIGURATION ##
