--- a/.env.example
+++ b/.env.example
@@ -23,19 +23,13 @@ NEXT_PUBLIC_SITE_DEFAULT_THEME="light"
 
 
 ############################
-### CLERK CONFIGURATION ####
+### Auth CONFIGURATION ####3
 ############################
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
-CLERK_SECRET_KEY=
-NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
-NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
-NEXT_PUBLIC_CLERK_SOCIAL_BUTTONS_VARIANT=iconButton
-NEXT_PUBLIC_CLERK_SOCIAL_BUTTONS_PLACEMENT=bottom
-NEXT_PUBLIC_CLERK_SIGN_IN_FALLBACK_REDIRECT_URL=/dashboard
-NEXT_PUBLIC_CLERK_SIGN_UP_FORCE_REDIRECT_URL=/onboarding
+AUTH_SECRET="aqwertyui"  
+
 
 ############################
 ### MONGODB CONFIGURATION ##
 ############################
-# Note: change <password> with the password provided by mongodb
+# Note: Add your connection string to your database
 DATABASE_URL=""
