--- a/package.json
+++ b/package.json
@@ -11,8 +11,6 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
-    "@clerk/nextjs": "^5.1.5",
-    "@clerk/themes": "^2.1.9",
     "@hookform/resolvers": "^3.6.0",
     "@prisma/client": "^5.16.0",
     "@radix-ui/react-avatar": "^1.1.0",
@@ -29,6 +27,7 @@
     "date-fns": "^3.6.0",
     "lucide-react": "^0.395.0",
     "next": "14.2.4",
+    "next-auth": "^5.0.0-beta.19",
     "next-themes": "^0.3.0",
     "prisma": "^5.16.0",
     "react": "^18",
