Created email sendi ng using react Email and Nodemailer

--- a/.env
+++ b/.env
@@ -22,9 +22,21 @@ NEXT_PUBLIC_SITE_DARK_LOGO="/logos/logo-dark.svg"
 NEXT_PUBLIC_SITE_DEFAULT_THEME="light"
 
 ############################
-### Auth CONFIGURATION ####3
+### Auth CONFIGURATION #####
 ############################
 AUTH_SECRET="aqwertyui"
+
+############################
+### Email CONFIGURATION ####
+############################
+NEXT_PUBLIC_SENDEER_EMAIL=celer.inc@outlook.com
+NEXT_PUBLIC_SENDER_EMAIL_PASSWORD=Npmnpmnpmnpm123
+NEXT_PUBLIC_SENDER_EMAIL_PROVIDER=outlook
+NEXT_PUBLIC_ADDRESS_INFO="    
+    © 2023 Blendify. 
+    37431 Bad Lauterberg.
+    NDR Germany.
+"
 
 ############################
 ### MONGODB CONFIGURATION ##
