--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,17 @@ NEXT_PUBLIC_SITE_DEFAULT_THEME="light"
 ############################
 AUTH_SECRET="aqwertyui"  
 
+############################
+### Email CONFIGURATION ####
+############################
+SENDEER_EMAIL=youremail@loutlook.com
+SENDER_EMAIL_PASSWORD=pass*********
+NEXT_PUBLIC_SENDER_EMAIL_PROVIDER=outlook
+# Use png, jpg or gif Avoid using svg files. 
+# Reference https://react.email/docs/components/image
+# Refrence https://www.caniemail.com/features/image-svg/
+# Change the Domain and the URL when you change the server.
+NEXT_PUBLIC_EMAIL_LOGO="http://localhost:3000/email/logo.png"
 
 ############################
 ### MONGODB CONFIGURATION ##
