--- a/package.json
+++ b/package.json
@@ -19,16 +19,20 @@
     "@radix-ui/react-popover": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
+    "@react-email/components": "^0.0.19",
     "@tanstack/react-query": "^5.48.0",
+    "@types/nodemailer": "^6.4.15",
     "autoprefixer": "^10.4.19",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
     "date-fns": "^3.6.0",
+    "log-to-file": "^3.0.3",
     "lucide-react": "^0.395.0",
     "next": "14.2.4",
     "next-auth": "^5.0.0-beta.19",
     "next-themes": "^0.3.0",
+    "nodemailer": "^6.9.14",
     "prisma": "^5.16.0",
     "react": "^18",
     "react-day-picker": "^8.10.1",
