--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@react-email/components": "^0.0.19",
-    "@tanstack/react-query": "^5.48.0",
     "@types/nodemailer": "^6.4.15",
     "autoprefixer": "^10.4.19",
     "class-variance-authority": "^0.7.0",
@@ -38,6 +37,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
+    "react-hook-usefetch": "^1.0.4",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
