Configured prisma and mongodb

--- a/.env
+++ b/.env
@@ -41,4 +41,4 @@ NEXT_PUBLIC_ADDRESS_INFO="
 ############################
 ### MONGODB CONFIGURATION ##
 ############################
-DATABASE_URL="mongodb+srv://abdelrahmanshwork:gso34eIMYjSbqiN9@blendify.qfgj2rf.mongodb.net/?retryWrites=true&w=majority&appName=Blendify"
+DATABASE_URL="mongodb+srv://admin:ddjuWhv87JALIMpF@blendify.qfgj2rf.mongodb.net/blendify?retryWrites=true&w=majority"
