--- a/.env.example
+++ b/.env.example
@@ -42,5 +42,8 @@ NEXT_PUBLIC_EMAIL_LOGO="http://localhost:3000/email/logo.png"
 ############################
 ### MONGODB CONFIGURATION ##
 ############################
-# Note: Add your connection string to your database
+# Note: Add your connection string to your database 
+# follow the documentation when you are using anthor databases https://www.prisma.io/docs/orm/overview/databases
+# mongodb : mongodb+srv://USERNAME:PASSWORD@cluster.mongodb.net/DATABASE?retryWrites=true&w=majority" 
+ 
 DATABASE_URL=""
