Add JWT for securing claims aboiut user signin

--- a/.env
+++ b/.env
@@ -1,4 +1,9 @@
 ############################
+###### SITE CONFIG #########
+############################
+NEXT_URL=http://localhost:3000 
+
+############################
 ###### METADATA ############
 ############################
 NEXT_PUBLIC_METADATA_NAME="Blendify"
@@ -32,11 +37,6 @@ AUTH_SECRET="aqwertyui"
 NEXT_PUBLIC_SENDEER_EMAIL=celer.inc@outlook.com
 NEXT_PUBLIC_SENDER_EMAIL_PASSWORD=Npmnpmnpmnpm123
 NEXT_PUBLIC_SENDER_EMAIL_PROVIDER=outlook
-NEXT_PUBLIC_ADDRESS_INFO="    
-    © 2023 Blendify. 
-    37431 Bad Lauterberg.
-    NDR Germany.
-"
 
 ############################
 ### MONGODB CONFIGURATION ##
