--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,9 @@
-######################
+############################
+###### SITE CONFIG #########
+############################
+NEXT_URL=http://localhost:3000 
+
+############################
 ###### METADATA ############
 ############################
 NEXT_PUBLIC_METADATA_NAME=
@@ -33,11 +38,6 @@ AUTH_SECRET="aqwertyui"
 SENDEER_EMAIL=youremail@loutlook.com
 SENDER_EMAIL_PASSWORD=pass*********
 NEXT_PUBLIC_SENDER_EMAIL_PROVIDER=outlook
-# Use png, jpg or gif Avoid using svg files. 
-# Reference https://react.email/docs/components/image
-# Refrence https://www.caniemail.com/features/image-svg/
-# Change the Domain and the URL when you change the server.
-NEXT_PUBLIC_EMAIL_LOGO="http://localhost:3000/email/logo.png"
 
 ############################
 ### MONGODB CONFIGURATION ##
