--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@react-email/components": "^0.0.19",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/nodemailer": "^6.4.15",
     "autoprefixer": "^10.4.19",
     "bcrypt": "^5.1.1",
@@ -28,7 +29,8 @@
     "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
     "date-fns": "^3.6.0",
-    "jsonwebtoken": "^9.0.2",
+    "jose": "^5.6.3",
+    "jsonwebtoken": "^8.5.1",
     "log-to-file": "^3.0.3",
     "lucide-react": "^0.395.0",
     "next": "14.2.4",
