Created a build functiom for checking required env vars

--- a/.env
+++ b/.env
@@ -1,4 +1,10 @@
 ############################
+### SECRETS CONFIGURATION ##
+############################
+APP_KEY="hjjvxljvoakjcvxkvcxkjvxkljvxkjlhlkdfghldgshlslhsdhfl"
+
+
+############################
 ###### SITE CONFIG #########
 ############################
 NEXT_URL=http://localhost:3000 
@@ -27,9 +33,10 @@ NEXT_PUBLIC_SITE_DARK_LOGO="/logos/logo-dark.svg"
 NEXT_PUBLIC_SITE_DEFAULT_THEME="light"
 
 ############################
-### Auth CONFIGURATION #####
+### SCRETS CONFIGURATION ###
 ############################
-AUTH_SECRET="aqwertyui"
+APP_KEY="h"
+APP_KEY_AUTO_GENERATE=true
 
 ############################
 ### Email CONFIGURATION ####
