--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,25 @@
 ############################
+### SECRETS CONFIGURATION ##
+############################
+# Required
+# run blendify generate to generate a key
+APP_KEY="h"
+
+
+############################
 ###### SITE CONFIG #########
 ############################
+# Required
 NEXT_URL=http://localhost:3000 
 
 ############################
 ###### METADATA ############
 ############################
+# Required
 NEXT_PUBLIC_METADATA_NAME=
 NEXT_PUBLIC_METADATA_DESCRIPTION=
 NEXT_PUBLIC_METADATA_LOGO=
+# Required
 NEXT_PUBLIC_METADATA_TITLE=
 NEXT_PUBLIC_METADATA_OG_LOCALE=
 NEXT_PUBLIC_METADATA_CATEGORY=
@@ -26,24 +37,25 @@ NEXT_PUBLIC_SITE_LIGHT_LOGO=
 NEXT_PUBLIC_SITE_DARK_LOGO=
 NEXT_PUBLIC_SITE_DEFAULT_THEME="light"
 
-
-############################
-### Auth CONFIGURATION ####3
-############################
-AUTH_SECRET="aqwertyui"  
-
 ############################
 ### Email CONFIGURATION ####
 ############################
+# If you want to use a different email provider other than outlook, you need to provide these manually.
+# Or you can go use these well known services and their settings at
+# https://github.com/nodemailer/nodemailer/blob/master/lib/well-known/services.json
+# API ENDPOINT app/api/email/*
+# Required
 SENDEER_EMAIL=youremail@loutlook.com
+# Required
 SENDER_EMAIL_PASSWORD=pass*********
+# Required
 NEXT_PUBLIC_SENDER_EMAIL_PROVIDER=outlook
 
 ############################
-### MONGODB CONFIGURATION ##
+## DATABASE CONFIGURATION ##
 ############################
 # Note: Add your connection string to your database 
 # follow the documentation when you are using anthor databases https://www.prisma.io/docs/orm/overview/databases
 # mongodb : mongodb+srv://USERNAME:PASSWORD@cluster.mongodb.net/DATABASE?retryWrites=true&w=majority" 
- 
+# Required
 DATABASE_URL=""
