--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,6 +4,7 @@ on:
   # Runs on pushes targeting the default branch
   push:
     branches: [$default-branch]
+  workflow_dispatch:
 
 jobs:
   # Build job
