--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Install dependencies
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
       - name: Copy env
-        run: cp .env.dev .env
+        run: cp .env
       - name: Copy TS Config
         run: cp tsconfig.json && next-env.d.ts
       - name: Build with Next.js
