--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,6 @@ jobs:
         with:
           node-version: "20"
       - name: Install dependencies
-        run: npm run install
+        run: npm install
       - name: Build with Next.js
         run: npm run build
