--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,5 +19,7 @@ jobs:
           node-version: "20"
       - name: Install dependencies
         run: npm install
+      - name: Debug
+        run: ls -R src/components
       - name: Build with Next.js
         run: npm run build
