--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "blendify",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "test": "jest"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.6.0",
@@ -31,12 +33,12 @@
     "date-fns": "^3.6.0",
     "input-otp": "^1.2.4",
     "is-url": "^1.2.4",
-    "jose": "^5.6.3",
     "jsonwebtoken": "^8.5.1",
     "log-to-file": "^3.0.3",
     "lucide-react": "^0.395.0",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
+    "node-mocks-http": "^1.15.0",
     "nodemailer": "^6.9.14",
     "react": "^18",
     "react-day-picker": "^8.10.1",
@@ -46,6 +48,7 @@
     "swr": "^2.2.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "ts-node": "^10.9.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -58,16 +61,22 @@
     "@storybook/nextjs": "^8.1.10",
     "@storybook/react": "^8.1.10",
     "@storybook/test": "^8.1.10",
+    "@testing-library/jest-dom": "^6.4.6",
+    "@testing-library/react": "^16.0.0",
     "@types/bcrypt": "^5.0.2",
     "@types/crypto-js": "^4.2.2",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "chromatic": "^11.5.4",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.38",
     "prisma": "^5.16.1",
     "storybook": "^8.1.10",
     "tailwindcss": "^3.4.4",
+    "ts-jest": "^29.2.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5"
   }
