--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-  "github-actions.workflows.pinned.workflows": []
+  "github-actions.workflows.pinned.workflows": [
+    ".github/workflows/test.yml",
+    ".github/workflows/build.yml"
+  ]
 }
