--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "lucide-react": "^0.395.0",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
-    "node-mocks-http": "^1.15.0",
     "nodemailer": "^6.9.14",
     "react": "^18",
     "react-day-picker": "^8.10.1",
@@ -48,7 +47,6 @@
     "swr": "^2.2.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "ts-node": "^10.9.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -72,6 +70,8 @@
     "chromatic": "^11.5.4",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "next-test-api-route-handler": "^4.0.8",
+    "node-mocks-http": "^1.15.0",
     "postcss": "^8.4.38",
     "prisma": "^5.16.1",
     "storybook": "^8.1.10",
