--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -1,5 +1,10 @@
 name: Cypress Tests
-on: [push]
+on:
+  # Runs on pushes targeting the default branch
+  push:
+    branches: [$default-branch]
+  workflow_dispatch:
+
 jobs:
   cypress-run:
     runs-on: ubuntu-latest
