Updated some app reltaed configurations

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@
 ############################
 # Required
 # run blendify generate to generate a key
-APP_KEY="h"
+APP_KEY=""
 
 
 ############################
