--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,8 +18,8 @@ jobs:
         with:
           node-version: "20"
       - name: Install dependencies
-        run: npm install
+        run: pnpm install
       - name: Debug
         run: ls -R src/components
       - name: Build with Next.js
-        run: npm run build
+        run: pnpm run build
