--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "test": "jest --watch",
+    "test:watch": "jest --watch",
+    "test": "jest",
     "cy:open": "cypress open",
     "cy:run": "cypress run",
     "depcheck": "depcheck",
@@ -29,8 +30,6 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@react-email/components": "^0.0.19",
-    "@types/jsonwebtoken": "^9.0.6",
-    "@types/nodemailer": "^6.4.15",
     "autoprefixer": "^10.4.19",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
@@ -51,7 +50,6 @@
     "react-hook-form": "^7.52.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "ts-node": "^10.9.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -68,7 +66,9 @@
     "@types/bcrypt": "^5.0.2",
     "@types/crypto-js": "^4.2.2",
     "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "chromatic": "^11.5.4",
@@ -81,6 +81,7 @@
     "storybook": "^8.1.10",
     "tailwindcss": "^3.4.4",
     "ts-jest": "^29.2.2",
+    "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5"
   }
