Updated the cypress tests

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 ### SECRETS CONFIGURATION ##
 ############################
 # Required
-# run blendify generate to generate a key
+# Use https://1password.com/password-generator/ for generating strong passwords
 APP_KEY=""
 
 
@@ -43,11 +43,10 @@ NEXT_PUBLIC_SITE_DEFAULT_THEME="light"
 # If you want to use a different email provider other than outlook, you need to provide these manually.
 # Or you can go use these well known services and their settings at
 # https://github.com/nodemailer/nodemailer/blob/master/lib/well-known/services.json
-# API ENDPOINT app/api/email/*
 # Required
-SENDEER_EMAIL=youremail@loutlook.com
+NEXT_PUBLIC_SENDER_EMAIL=youremail@loutlook.com
 # Required
-SENDER_EMAIL_PASSWORD=pass*********
+NEXT_PUBLIC_SENDER_EMAIL_PASSWORD=pass*********
 # Required
 NEXT_PUBLIC_SENDER_EMAIL_PROVIDER=outlook
 
