--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "preinstall": "npx only-allow pnpm",
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -44,6 +44,7 @@
     "next": "14.2.4",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.14",
+    "process": "^0.11.10",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
