Add loading ui and solved the location href error

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
   "github-actions.workflows.pinned.workflows": [
     ".github/workflows/test.yml",
     ".github/workflows/build.yml"
-  ]
+  ],
+  "typescript.tsdk": "node_modules\\typescript\\lib"
 }
