--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "preinstall": "npx only-allow pnpm",
-    "dev": "next dev --turbo",
+    "dev": "(if exist .next rd /s /q .next 2>nul) && next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -73,7 +73,6 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "chromatic": "^11.5.4",
-    "cypress": "^13.13.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "node-mocks-http": "^1.15.0",
