--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "crypto-js": "^4.2.0",
     "date-fns": "^3.6.0",
     "input-otp": "^1.2.4",
     "is-url": "^1.2.4",
@@ -42,6 +41,7 @@
     "log-to-file": "^3.0.3",
     "lucide-react": "^0.395.0",
     "next": "14.2.4",
+    "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.14",
     "react": "^18",
