--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "prisma:validate": "prisma validate"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.4.1",
     "@hookform/resolvers": "^3.6.0",
-    "@prisma/client": "^5.16.1",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.17.0",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.1.0",
@@ -43,6 +45,7 @@
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.14",
+    "prisma": "^5.17.0",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
@@ -73,7 +76,6 @@
     "jest-environment-jsdom": "^29.7.0",
     "node-mocks-http": "^1.15.0",
     "postcss": "^8.4.38",
-    "prisma": "^5.16.1",
     "storybook": "^8.1.10",
     "tailwindcss": "^3.4.4",
     "ts-jest": "^29.2.2",
