--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "chromatic": "^11.5.4",
+    "dotenv": "^16.4.5",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "node-mocks-http": "^1.15.0",
