Chnaged from verifying using otp to accesstoken

--- a/.env.example
+++ b/.env.example
@@ -5,12 +5,19 @@
 # Use https://1password.com/password-generator/ for generating strong passwords
 APP_KEY=""
 
+############################
+### OAUTH CONFIGURATION ####
+############################
+GITHUB_CLIENT_ID=""
+GITHUB_CLIENT_SECRET=""
 
 ############################
 ###### SITE CONFIG #########
 ############################
+# the canonical URL of the
 # Required
 NEXT_URL=http://localhost:3000 
+NEXTAUTH_URL=http://localhost:3000/
 
 ############################
 ###### METADATA ############
