--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@react-email/components": "^0.0.19",
+    "@tanstack/react-query": "^5.51.11",
     "autoprefixer": "^10.4.19",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
@@ -39,11 +40,13 @@
     "date-fns": "^3.6.0",
     "input-otp": "^1.2.4",
     "is-url": "^1.2.4",
+    "jsonwebtoken": "^9.0.2",
     "log-to-file": "^3.0.3",
     "lucide-react": "^0.395.0",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
+    "next-typesafe-url": "4.1.0",
     "nodemailer": "^6.9.14",
     "prisma": "^5.17.0",
     "react": "^18",
@@ -67,6 +70,7 @@
     "@testing-library/react": "^16.0.0",
     "@types/bcrypt": "^5.0.2",
     "@types/jest": "^29.5.12",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
