--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "lucide-react": "^0.395.0",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
+    "next-intl": "^3.17.2",
     "next-themes": "^0.3.0",
     "next-typesafe-url": "4.1.0",
     "nodemailer": "^6.9.14",
