--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@hookform/resolvers": "^3.6.0",
     "@prisma/client": "^5.17.0",
     "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-menubar": "^1.1.1",
     "@radix-ui/react-popover": "^1.1.0",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
@@ -35,6 +37,7 @@
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "input-otp": "^1.2.4",
     "is-url": "^1.2.4",
@@ -43,6 +46,7 @@
     "lucide-react": "^0.395.0",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
+    "next-client-cookies": "^1.1.1",
     "next-intl": "^3.17.2",
     "next-themes": "^0.3.0",
     "next-typesafe-url": "4.1.0",
@@ -52,6 +56,8 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
+    "react-hotkeys-hook": "^4.5.0",
+    "recharts": "^2.12.7",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
