--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "type": "module",
+  "prisma": {
+    "seed": "node prisma/seed.js"
+  },
   "scripts": {
     "preinstall": "npx only-allow pnpm",
     "dev": "(if exist .next rd /s /q .next 2>nul) && next dev",
@@ -13,10 +16,8 @@
     "build-storybook": "storybook build",
     "test:watch": "jest --watch",
     "test": "jest",
-    "cy:open": "cypress open",
-    "cy:run": "cypress run",
-    "prisma:studio": "prisma studio",
     "prisma:generate": "prisma generate",
+    "prisma:seed": "prisma db seed",
     "prisma:validate": "prisma validate"
   },
   "dependencies": {
@@ -28,6 +29,7 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-menubar": "^1.1.1",
     "@radix-ui/react-popover": "^1.1.0",
+    "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
@@ -39,7 +41,6 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
-    "input-otp": "^1.2.4",
     "is-url": "^1.2.4",
     "jsonwebtoken": "^9.0.2",
     "log-to-file": "^3.0.3",
@@ -57,12 +58,13 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
     "react-hotkeys-hook": "^4.5.0",
-    "recharts": "^2.12.7",
+    "react-intersection-observer": "^9.13.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@storybook/addon-essentials": "^8.1.10",
     "@storybook/addon-interactions": "^8.1.10",
     "@storybook/addon-links": "^8.1.10",
@@ -74,9 +76,10 @@
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^16.0.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/faker": "^6.6.9",
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
-    "@types/node": "^20",
+    "@types/node": "^20.14.10",
     "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -91,6 +94,6 @@
     "ts-jest": "^29.2.2",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5"
+    "typescript": "^5.5.3"
   }
 }
