--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "prisma:validate": "prisma validate"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.6.0",
+    "@hookform/resolvers": "^3.9.0",
     "@prisma/client": "^5.17.0",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
@@ -35,8 +35,9 @@
     "@radix-ui/react-toast": "^1.2.1",
     "@react-email/components": "^0.0.19",
     "@tanstack/react-query": "^5.51.11",
+    "@types/bcryptjs": "^2.4.6",
     "autoprefixer": "^10.4.19",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -47,7 +48,6 @@
     "lucide-react": "^0.395.0",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
-    "next-client-cookies": "^1.1.1",
     "next-intl": "^3.17.2",
     "next-themes": "^0.3.0",
     "next-typesafe-url": "4.1.0",
@@ -56,7 +56,7 @@
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
-    "react-hook-form": "^7.52.0",
+    "react-hook-form": "^7.52.1",
     "react-hotkeys-hook": "^4.5.0",
     "react-intersection-observer": "^9.13.0",
     "tailwind-merge": "^2.3.0",
@@ -64,7 +64,6 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@faker-js/faker": "^8.4.1",
     "@storybook/addon-essentials": "^8.1.10",
     "@storybook/addon-interactions": "^8.1.10",
     "@storybook/addon-links": "^8.1.10",
@@ -75,8 +74,6 @@
     "@storybook/test": "^8.1.10",
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^16.0.0",
-    "@types/bcrypt": "^5.0.2",
-    "@types/faker": "^6.6.9",
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.14.10",
