--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "preinstall": "npx only-allow pnpm",
-    "dev": "(if exist .next rd /s /q .next 2>nul) && next dev",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -51,6 +51,7 @@
     "next-themes": "^0.3.0",
     "next-typesafe-url": "4.1.0",
     "nodemailer": "^6.9.14",
+    "openssl": "^2.0.0",
     "prisma": "^5.17.0",
     "react": "^18",
     "react-day-picker": "^8.10.1",
