--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@react-email/components": "^0.0.19",
+    "@t3-oss/env-nextjs": "^0.11.1",
     "@tanstack/react-query": "^5.51.11",
     "@types/bcryptjs": "^2.4.6",
     "autoprefixer": "^10.4.19",
